--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-requests>=2.31.0
-flask>=3.0.0
+Flask==3.0.0
+requests==2.31.0
+flask-socketio==5.3.5
+python-socketio==5.10.0
+gevent>=23.0.0
+gevent-websocket>=0.10.1
 
